--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div id="start-screen" class="fixed inset-0 bg-black z-50 flex flex-col items-center justify-center">
         <p class="mb-4 animate-pulse text-xl opacity-80">SISTEMA DETECTADO</p>
         <button onclick="startExperience()" class="glitch-btn border border-green-500 px-8 py-3 text-2xl uppercase tracking-widest transition-all duration-100 hover:text-black hover:bg-green-500 cursor-pointer">
-            [ SOLICITAR ACESSO ]
+            [ PERMITIR ]
         </button>
     </div>
 
